# rubert_author_attribution

./: .actrc  .dockerignore  .env.prod.example  .gitignore  .secrets.example  Dockerfile  Dockerfile.gpu  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  loadtest.py  pyproject.toml
.github/workflows/: build-and-push.yml
data/: data.dvc
data/scripts/: balance_authors.py  clean_named_entities.py  get_embedding.py  ilibrary_exctraction.py  ilibrary_parser.py  librusec_foreing_extraction.py  normalize_datasets.py  register_model.py  ruslit_to_csv.py  upload_qwen_lora_to_mlflow.py
data/scripts/shared/: balance_df_authors.py  chunks_by_tokens.py  clean_named_entities.py  normailze_text.py  send_df_meta_to_mlflow.py  siamese_bert.py
frontend/: .dockerignore  Dockerfile  Dockerfile_prod  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite-env.d.ts  vite.config.ts
frontend/src/: App.tsx  router.tsx
frontend/src/api/: authApi.ts  authorsApi.ts  client.ts  embeddingCompareApi.ts  genresApi.ts  predictApi.ts  styleTextApi.ts  textsApi.ts
frontend/src/constants/: metricLabelsRu.ts
frontend/src/content/: about.md
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useAuthorMetrics.ts  useAuthors.ts  useCorpusImport.ts  useCurrentUser.ts  useDeleteWithDialogs.ts  useEmbeddingCompare.ts  useGenerativeAuthors.ts  useGenres.ts  usePrediction.ts  useStyleText.ts  useTexts.ts
frontend/src/i18n/: strings.ts
frontend/src/locales/: ru.json
frontend/src/pages/: AboutPage.tsx  AddAuthorPage.tsx  AuthorDetailPage.tsx  AuthorsPage.tsx  GenresPage.tsx  HomePage.tsx  ImportCorpusPage.tsx  LoginPage.tsx  (+3 more)
nginx/: Dockerfile_prod  nginx.conf  nginx_prod.conf
notebooks/01_analysis/: ruslit_classic_analysis.ipynb  total_analysis.ipynb
notebooks/02_prep/: create_balanced_multigenre_dataset.ipynb
notebooks/03_fasttext/: fasttext.ipynb
notebooks/04_bert/: finetune_bert_contrasive.ipynb  finetune_bert_triplet.ipynb  star_testing.ipynb
notebooks/05_stylization/: LLM_TRAINING.ipynb  parallel_dataset_creating.ipynb
notebooks/analysis/: npl1_analysis.ipynb
observability/: mlflow_auth.ini  prometheus.yml.template  promtail-config.yaml
src/api/: createsuperuser.py  generate_jwt_keys.py  import_csv.py  pyproject.cpu.toml  pyproject.toml
(+116 files in other folders)
