[project]
name = "rubert-author-attribution"
version = "0.1.0"
description = ""
authors = [
    {name = "Павел",email = "78384513+piligrimdev@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "torch (>=2.11.0,<3.0.0)",
    "transformers (>=5.5.3,<6.0.0)",
    "dvc (>=3.67.1,<4.0.0)",
    "dvclive (>=3.49.0,<4.0.0)",
    "nltk (>=3.9.4,<4.0.0)",
    "fasttext (>=0.9.3,<0.10.0)",
    "corus (>=0.10.0,<0.11.0)",
    "validators (>=0.35.0,<0.36.0)",
    "emoji (>=2.15.0,<3.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "umap-learn (>=0.5.12,<0.6.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pgvector (>=0.4.2,<0.5.0)",
    "psycopg-binary (>=3.3.3,<4.0.0)",
    "aiohttp (>=3.13.5,<4.0.0)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "lxml (>=6.1.0,<7.0.0)",
    "datasets (>=4.8.5,<5.0.0)",
    "razdel (>=0.5.0,<0.6.0)",
    "mlflow-skinny (>=3.12.0,<4.0.0)",
    "dvc-s3 (>=3.3.0,<4.0.0)",
    "textstat (>=0.7.13,<0.8.0)",
    "lexicalrichness (>=0.5.1,<0.6.0)",
    "spacy (>=3.8.14,<4.0.0)",
    "notebook (>=7.5.6,<8.0.0)",
    "joblib (>=1.5.3,<2.0.0)",
    "legacy-cgi (>=2.6.4,<3.0.0)",
    "gensim (>=4.4.0,<5.0.0)",
    "fasttext-numpy2 (>=0.10.4,<0.11.0)",
    "nbdime (>=4.0.4,<5.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "jwt (>=1.4.0,<2.0.0)",
    "peft (>=0.19.1,<0.20.0)",
    "sqladmin (>=0.25.0,<0.26.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "pyjwt (>=2.12.1,<3.0.0)",
    "sqlalchemy-utils (>=0.42.1,<0.43.0)",
    "celery (>=5.6.3,<6.0.0)",
    "redis (>=7.4.0,<8.0.0)",
    "flower (>=2.0.1,<3.0.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "prometheus-client (>=0.25.0,<0.26.0)",
    "prometheus-fastapi-instrumentator (>=7.1.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
